<resources>
    <string name="app_name">CurrencyCalculator</string>
    <string name="currency_calculator_label">Currency \nCalculator</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="convert_btn">Convert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_currency">Select Currency</string>
    <string name="search_currency">search currency</string>
    <string name="cancel">cancel</string>
    <string name="not_found">Not found</string>
    <string name="get_alert"><u>Get rate alerts straight to your email inbox</u></string>
    <string name="mid_market"><u>Mid-market exchange rate at 13:38 UTC</u></string>
    <string name="first_image_curr">first image currency</string>
</resources>