<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.convert.ConvertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/drawer_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_up_label"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/currency_calculator_label"
            android:textColor="@color/colorBlue"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="."
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/currencyLabel"
            app:layout_constraintStart_toEndOf="@id/currencyLabel"
            app:layout_constraintTop_toTopOf="@id/currencyLabel" />


        <LinearLayout
            android:id="@+id/amountContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/currency_bg"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/currencyLabel">

            <EditText
                android:id="@+id/amount1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                tools:text="123343454545454545454545454123343454545454545454545454123343454545454545454545454" />

            <TextView
                android:id="@+id/currency1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="EUR" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/amountContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/currency_bg"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/amountContainer1">

            <EditText
                android:id="@+id/amount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                tools:text="123343454545454545454545454123343454545454545454545454123343454545454545454545454" />

            <TextView
                android:id="@+id/currency2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="EUR" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currencyContainer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/exclogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountContainer2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/currencyLogo1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/first_image_curr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/currencyAbrv1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/currencyAbrv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrowDown1"
                app:layout_constraintStart_toEndOf="@id/currencyLogo1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="EUR" />

            <ImageView
                android:id="@+id/arrowDown1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/currencyAbrv1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/exclogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/exchange_icon"
            app:layout_constraintEnd_toStartOf="@id/currencyContainer2"
            app:layout_constraintStart_toEndOf="@id/currencyContainer1"
            app:layout_constraintTop_toBottomOf="@id/amountContainer2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currencyContainer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/exclogo"
            app:layout_constraintTop_toBottomOf="@id/amountContainer2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/currencyLogo2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/currencyAbrv2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/currencyAbrv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrowDown2"
                app:layout_constraintStart_toEndOf="@id/currencyLogo2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="EUR" />

            <ImageView
                android:id="@+id/arrowDown2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/currencyAbrv2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/convert_btn"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/currencyContainer1" />

        <TextView
            android:id="@+id/midMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mid_market"
            android:textColor="@color/colorBlue"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/convert" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/chart_bg"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/midMarker">

            <LinearLayout
                android:id="@+id/day30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/day90"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/day30Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Past 30 days"
                    android:textColor="@color/day_color"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/day30Ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/day_indicator"
                    app:layout_constraintEnd_toEndOf="@id/day30"
                    app:layout_constraintStart_toStartOf="@id/day30"
                    app:layout_constraintTop_toBottomOf="@id/day30" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/day30"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/day90Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Past 90 days"
                    android:textColor="@color/day_color"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/day90Ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/day_indicator"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@id/day30"
                    app:layout_constraintStart_toStartOf="@id/day30"
                    app:layout_constraintTop_toBottomOf="@id/day30" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/day90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/get_alert"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>